src/test/resources/public/input/typechecking/pass/passReturn04.jova
class Helper {
   private int a;

   public int getA() {
    return a;
   }
}

class B {
    public Helper getHelper(){
        Helper a;
        a = new Helper;
        return a;
    }
}

class A {

  private Helper getHelper(Helper h) {
    return h;
  }

  public int func() {
    B b;
    int foo;
    foo = 3;
    b = new B;


    return foo + getHelper(b.getHelper()).getA();
  }
}
