src/test/resources/public/input/typechecking/fail/incompatible_return/fail06.jova
class Helper {
}

class A {

  private int getParamAsReturn(int param) {
    return param;
  }

  public Helper func() {
    return getParamAsReturn(3);
  }
}
